--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,10 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install poetry
+      - name: Regenerate lock file (no‑update)
+        run: poetry lock --no‑update
       - name: Install deps
-        run: poetry install
+        run: poetry install --no‑interaction
+
       - name: Run tests
         run: poetry run pytest -q
