--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,8 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install poetry
-      - name: Regenerate lock file (no‑update)
-        run: poetry lock --no‑update
+      - name: Regenerate lock file
+        run: poetry lock
       - name: Install deps
         run: poetry install --no‑interaction
 
