ci: remove unsupported --no-interaction flag from install step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Regenerate lock file
         run: poetry lock
       - name: Install deps
-        run: poetry install --no‑interaction
+        run: poetry install
 
       - name: Run tests
         run: poetry run pytest -q
