--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = "^3.12"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4"
+ruff = "^0.4.0"
 
 [build-system]
 requires = ["poetry-core"]
